Fixed mistake in GetAllBuildings doc
